Seasonal styles update

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
             <a href="https://merronteklu.github.io/time-of-day/" target="_blank">Time Of Day</a>
             <a href="https://merronteklu.github.io/dailygrind/" target="_blank">Daily Grind</a>
             <a href="https://merronteklu.github.io/DOM-play/" target="_blank">DOM Play</a>
+            <a href="https://merronteklu.github.io/seasonal-styles/index.html" target="_blank">Seasonal Styles</a>
             <a href="https://github.com/merronteklu" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/merron-teklu-a5b527113/" target="_blank">linkedin</a>
+
+
        
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
